refactor(bryce-cloud):重构项目并更新依赖版本
- 重构了多个模块的包结构
- 更新了多个依赖的版本，包括 Redisson、JetCache、Easy Trans 等
- 添加了新的依赖，如 httpclient 和 XXL-JOB
- 优化了 Redis 配置，支持哨兵和集群模式
-调整了日志配置，统一了 Loki URL 和日志格式- 移除了部分冗余代码和不必要的依赖

--- a/bryce-cloud-common/bryce-common-core/pom.xml
+++ b/bryce-cloud-common/bryce-common-core/pom.xml
@@ -44,17 +44,8 @@
             <version>${mybatis-plus.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.retry</groupId>
-            <artifactId>spring-retry</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>transmittable-thread-local</artifactId>
-        </dependency>
-        <!-- jwt 令牌 -->
-        <dependency>
-            <groupId>com.auth0</groupId>
-            <artifactId>java-jwt</artifactId>
         </dependency>
         <!-- Excel 工具 -->
         <dependency>
@@ -103,6 +94,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+        <!-- Netty DNS 解析 -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-resolver-dns-native-macos</artifactId>
+            <classifier>osx-aarch_64</classifier>
         </dependency>
     </dependencies>
 
