--- a/pom.xml
+++ b/pom.xml
@@ -36,40 +36,41 @@
         <!-- 验证码组件 -->
         <captcha.version>1.6.2</captcha.version>
         <!-- Redis -->
-        <redisson.version>3.30.0</redisson.version>
-        <jetcache.version>2.7.5</jetcache.version>
+        <redisson.version>3.37.0</redisson.version>
+        <jetcache.version>2.7.7</jetcache.version>
         <!-- ID 生成 -->
         <yitter-idgenerator.version>1.0.6</yitter-idgenerator.version>
         <!-- JWT 令牌 -->
         <auth0-jwt.version>4.4.0</auth0-jwt.version>
         <!-- Easy Trans 数据翻译插件 -->
-        <easy-trans.version>3.0.3</easy-trans.version>
+        <easy-trans.version>3.0.6</easy-trans.version>
         <!-- 实体转换器 -->
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <mapstruct.version>1.6.2</mapstruct.version>
         <!-- 短信组件 -->
-        <sms4j.version>3.2.1</sms4j.version>
-        <aliyun-dysmsapi.version>2.0.23</aliyun-dysmsapi.version>
-        <tencentcloud-sdk.version>3.1.574</tencentcloud-sdk.version>
+        <sms4j.version>3.3.3</sms4j.version>
+        <aliyun-dysmsapi.version>3.0.0</aliyun-dysmsapi.version>
+        <tencentcloud-sdk.version>4.0.11</tencentcloud-sdk.version>
         <!-- 对象存储 -->
-        <minio.version>8.5.1</minio.version>
-        <aliyun-oss.version>3.16.1</aliyun-oss.version>
+        <minio.version>8.5.12</minio.version>
+        <aliyun-oss.version>3.18.1</aliyun-oss.version>
         <qcloud-cos.version>5.6.97</qcloud-cos.version>
         <qiniu.version>7.12.1</qiniu.version>
         <huaweicloud-obs.version>3.23.9.1</huaweicloud-obs.version>
         <!-- 工具 -->
-        <hutool.version>5.8.28</hutool.version>
+        <hutool.version>5.8.32</hutool.version>
         <guava.version>33.2.0-jre</guava.version>
-        <easyexcel.version>3.3.4</easyexcel.version>
-        <transmittable-thread-local.version>2.14.3</transmittable-thread-local.version>
-        <commons-text.version>1.11.0</commons-text.version>
-        <jsoup.version>1.16.1</jsoup.version>
-        <okio.version>3.6.0</okio.version>
-        <spring-boot-admin.version>3.2.3</spring-boot-admin.version>
+        <easyexcel.version>4.0.3</easyexcel.version>
+        <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
+        <commons-text.version>1.12.0</commons-text.version>
+        <jsoup.version>1.18.1</jsoup.version>
+        <okio.version>3.9.1</okio.version>
+        <spring-boot-admin.version>3.3.4</spring-boot-admin.version>
         <binarywang-weixin.version>4.3.0</binarywang-weixin.version>
         <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <loki.version>1.4.2</loki.version>
-        <xxl-job.version>2.4.0</xxl-job.version>
+        <loki.version>1.5.2</loki.version>
+        <httpclient.version>4.5.13</httpclient.version>
+        <xxl-job.version>2.4.1</xxl-job.version>
     </properties>
 
     <!-- 模块 -->
@@ -229,7 +230,7 @@
             </dependency>
             <dependency>
                 <groupId>org.redisson</groupId>
-                <artifactId>redisson-spring-boot-starter</artifactId>
+                <artifactId>redisson</artifactId>
                 <version>${redisson.version}</version>
             </dependency>
             <dependency>
@@ -396,6 +397,17 @@
                 <artifactId>loki-logback-appender</artifactId>
                 <version>${loki.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+            <!-- XXL-JOB -->
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>${xxl-job.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -409,7 +421,7 @@
             </activation>
             <properties>
                 <profiles.active>dev</profiles.active>
-                <nacos.server-addr>localhost:8848</nacos.server-addr>
+                <nacos.server-addr>127.0.0.1:8848</nacos.server-addr>
                 <nacos.namespace>dev</nacos.namespace>
                 <nacos.group>bryce-cloud</nacos.group>
             </properties>
@@ -420,7 +432,7 @@
             <properties>
                 <profiles.active>test</profiles.active>
                 <nacos.server-addr>127.0.0.1:8848</nacos.server-addr>
-                <nacos.namespace>test</nacos.namespace>
+                <nacos.namespace>1cc16f97-9d13-4574-bd78-98b56fee8176</nacos.namespace>
                 <nacos.group>bryce-cloud</nacos.group>
             </properties>
         </profile>
