--- a/bryce-cloud-auth/pom.xml
+++ b/bryce-cloud-auth/pom.xml
@@ -20,6 +20,10 @@
         </dependency>
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-common-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-server</artifactId>
         </dependency>
         <dependency>
