--- a/bryce-cloud-common/bryce-common-cloud/pom.xml
+++ b/bryce-cloud-common/bryce-common-cloud/pom.xml
@@ -34,15 +34,15 @@
             <groupId>com.github.loki4j</groupId>
             <artifactId>loki-logback-appender</artifactId>
         </dependency>
-        <!-- Zipkin brave 链路追踪 -->
+        <!-- OpenTelemetry 链路追踪 -->
         <dependency>
             <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+            <artifactId>micrometer-tracing-bridge-otel</artifactId>
         </dependency>
         <!-- 上报 Zipkin -->
         <dependency>
-            <groupId>io.zipkin.reporter2</groupId>
-            <artifactId>zipkin-reporter-brave</artifactId>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-exporter-zipkin</artifactId>
         </dependency>
     </dependencies>
 </project>
