refactor(bryce-cloud):重构项目并优化代码
-重命名 AsyncExecutorConfig 为 AsyncConfig
- 删除 CustomSpringMvcContract 类
- 更新 Feign 客户端接口，移除 @Headers 注解
- 重构 LoginUserContext 和 LoginUserContextHolder
- 更新 SecurityContextInterceptor
- 优化日志记录级别
- 调整 pom.xml 依赖版本 - easyexcel 版本从4.0.3 降为 3.3.4 - 删除多个模块中重复的依赖项
- 更新各类配置文件和常量定义

--- a/bryce-cloud-common/bryce-common-core/pom.xml
+++ b/bryce-cloud-common/bryce-common-core/pom.xml
@@ -56,6 +56,12 @@
         <dependency>
             <groupId>com.fhs-opensource</groupId>
             <artifactId>easy-trans-mybatis-plus-extend</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>fastjson</artifactId>
+                    <groupId>com.alibaba</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- 糊涂工具 -->
         <dependency>
