--- a/bryce-cloud-common/bryce-common-api/pom.xml
+++ b/bryce-cloud-common/bryce-common-api/pom.xml
@@ -16,6 +16,10 @@
     <!-- 依赖 -->
     <dependencies>
         <dependency>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-common-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
