feat(common): 新增 RabbitMQ 和 XXL-JOB 组件
- 新增 BryceRabbitMQAutoConfiguration 和 BryceXxlJobAutoConfiguration- 添加 RabbitMQ 和 XXL-JOB 相关依赖
- 实现 ErrorMessageConfig 和 ReturnsCallbackConfig以处理消息队列错误
- 重构 XxlJobConfig，支持配置属性

--- a/bryce-cloud-auth/pom.xml
+++ b/bryce-cloud-auth/pom.xml
@@ -14,10 +14,12 @@
 
     <!-- 依赖 -->
     <dependencies>
+        <!-- 通用 Cloud 依赖 -->
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-cloud</artifactId>
         </dependency>
+        <!-- 通用核心依赖 -->
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-core</artifactId>
