--- a/bryce-cloud-gateway/pom.xml
+++ b/bryce-cloud-gateway/pom.xml
@@ -12,10 +12,12 @@
 	<description>Demo project for Spring Cloud gateway service</description>
 
 	<dependencies>
-		<dependency>
+        <!-- 通用 Cloud 依赖 -->
+        <dependency>
 			<groupId>com.brycehan.cloud</groupId>
 			<artifactId>bryce-common-cloud</artifactId>
 		</dependency>
+        <!-- 通用核心依赖 -->
 		<dependency>
 			<groupId>com.brycehan.cloud</groupId>
 			<artifactId>bryce-common-core</artifactId>
