--- a/bryce-cloud-common/bryce-common-server/pom.xml
+++ b/bryce-cloud-common/bryce-common-server/pom.xml
@@ -14,9 +14,15 @@
 
     <!-- 依赖 -->
     <dependencies>
+        <!-- 通用核心依赖 -->
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-core</artifactId>
+        </dependency>
+        <!-- 通用 Cloud 依赖 -->
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-common-cloud</artifactId>
         </dependency>
         <!-- Web -->
         <dependency>
@@ -32,10 +38,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
