--- a/bryce-cloud-module/bryce-cloud-email/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-email/pom.xml
@@ -14,6 +14,7 @@
 
     <!-- 依赖 -->
     <dependencies>
+        <!-- 通用 Cloud 依赖 -->
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-cloud</artifactId>
