--- a/bryce-cloud-common/bryce-common-operatelog/pom.xml
+++ b/bryce-cloud-common/bryce-common-operatelog/pom.xml
@@ -19,6 +19,10 @@
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!-- Redis -->
         <dependency>
             <groupId>org.springframework.data</groupId>
