--- a/bryce-cloud-common/bryce-common-core/pom.xml
+++ b/bryce-cloud-common/bryce-common-core/pom.xml
@@ -41,7 +41,10 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-core</artifactId>
-            <version>${mybatis-plus.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
