--- a/bryce-cloud-common/bryce-common-mybatis/pom.xml
+++ b/bryce-cloud-common/bryce-common-mybatis/pom.xml
@@ -26,6 +26,10 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-jsqlparser</artifactId>
+        </dependency>
         <!-- 动态数据源 -->
         <dependency>
             <groupId>com.baomidou</groupId>
