build(dependencies): 更新依赖版本并添加新依赖
- 添加 commons-io 依赖
- 更新 easyexcel版本至 4.0.3
- 更新 minio 版本至 8.5.13
- 移除 jetcache 相关依赖

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
         <captcha.version>1.6.2</captcha.version>
         <!-- Redis -->
         <redisson.version>3.37.0</redisson.version>
-        <jetcache.version>2.7.7</jetcache.version>
         <!-- ID 生成 -->
         <yitter-idgenerator.version>1.0.6</yitter-idgenerator.version>
         <!-- JWT 令牌 -->
@@ -49,14 +48,15 @@
         <aliyun-dysmsapi.version>3.0.0</aliyun-dysmsapi.version>
         <tencentcloud-sdk.version>4.0.11</tencentcloud-sdk.version>
         <!-- 对象存储 -->
-        <minio.version>8.5.12</minio.version>
+        <minio.version>8.5.13</minio.version>
         <aliyun-oss.version>3.18.1</aliyun-oss.version>
         <qcloud-cos.version>5.6.97</qcloud-cos.version>
         <qiniu.version>7.12.1</qiniu.version>
         <huaweicloud-obs.version>3.23.9.1</huaweicloud-obs.version>
         <!-- 工具 -->
         <hutool.version>5.8.32</hutool.version>
-        <easyexcel.version>3.3.4</easyexcel.version>
+        <easyexcel.version>4.0.3</easyexcel.version>
+        <commons-io.version>2.16.1</commons-io.version>
         <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
         <jsoup.version>1.18.1</jsoup.version>
         <spring-boot-admin.version>3.3.4</spring-boot-admin.version>
@@ -245,11 +245,6 @@
                 <version>${redisson.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.alicp.jetcache</groupId>
-                <artifactId>jetcache-starter-redis-lettuce</artifactId>
-                <version>${jetcache.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.github.whvcse</groupId>
                 <artifactId>easy-captcha</artifactId>
                 <version>${captcha.version}</version>
@@ -334,6 +329,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel</artifactId>
                 <version>${easyexcel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
