--- a/bryce-cloud-common/bryce-common-core/pom.xml
+++ b/bryce-cloud-common/bryce-common-core/pom.xml
@@ -55,6 +55,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
         <!-- 糊涂工具 -->
         <dependency>
             <groupId>cn.hutool</groupId>
