feat(system): 添加地区编码功能模块
- 在数据库中新增地区编码相关表结构
- 添加地区编码的 CRUD 操作和相关权限- 优化错误处理逻辑，提升系统稳定性
- 替换部分依赖库以提高代码质量和性能

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- Mybatis Plus 框架 -->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-bom</artifactId>
