refactor(bryce-cloud):重构项目代码
- 调整代码结构，优化导入顺序- 统一代码格式，提高可读性
- 移除冗余代码，简化逻辑
- 更新实体类和DTO类的定义
- 修改部分方法实现，提高效率

--- a/deploy/gateway/Dockerfile
+++ b/deploy/gateway/Dockerfile
@@ -13,7 +13,7 @@ EXPOSE 8090
 ENTRYPOINT java \
 	-server \
 	-Dserver.port=8090 \
-	-Dspring.profiles.active=${spring_profiles_active:-prod} \
+	-Dspring.profiles.active=prod \
 	-Djava.security.egd=file:/dev/./urandom \
 	-Dfile.encoding=UTF-8 \
 	-Duser.timezone=${TZ} \
