--- a/bryce-cloud-module/bryce-cloud-system/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-system/pom.xml
@@ -48,6 +48,12 @@
 <!--            <groupId>com.brycehan.boot</groupId>-->
 <!--            <artifactId>bryce-generator-boot-starter</artifactId>-->
 <!--        </dependency>-->
+        <!-- 开发工具 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional><!-- 表示依赖不会传递 -->
+        </dependency>
     </dependencies>
 
     <!-- 构建 -->
