feat(storage): 增加文件下载功能并优化上传接口
- 新增文件下载接口，支持公共和安全访问类型的文件下载
- 扩展上传接口，增加访问类型参数
- 添加 AccessType枚举类，用于定义文件访问类型
- 更新数据库结构，在附件表中增加访问类型字段
- 优化本地存储服务，支持按访问类型存储文件

--- a/bryce-cloud-module/bryce-cloud-storage/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-storage/pom.xml
@@ -25,6 +25,10 @@
         </dependency>
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-common-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-operatelog</artifactId>
         </dependency>
         <!-- API -->
