refactor(dev): 添加开发工具依赖并优化代码结构
- 移除 AccessType 枚举中的冗余注解
- 在多个模块中添加 Spring Boot DevTools 依赖
- 新增 spring-devtools.properties 文件以配置热重启

--- a/bryce-cloud-module/bryce-cloud-storage/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-storage/pom.xml
@@ -61,6 +61,12 @@
             <groupId>com.huaweicloud</groupId>
             <artifactId>esdk-obs-java-bundle</artifactId>
         </dependency>
+        <!-- 开发工具 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional><!-- 表示依赖不会传递 -->
+        </dependency>
     </dependencies>
 
 </project>
