--- a/bryce-cloud-auth/pom.xml
+++ b/bryce-cloud-auth/pom.xml
@@ -50,6 +50,12 @@
             <groupId>com.github.whvcse</groupId>
             <artifactId>easy-captcha</artifactId>
         </dependency>
+        <!-- 开发工具 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional><!-- 表示依赖不会传递 -->
+        </dependency>
     </dependencies>
 
     <!-- 构建 -->
