--- a/bryce-cloud-gateway/pom.xml
+++ b/bryce-cloud-gateway/pom.xml
@@ -53,6 +53,12 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 		</dependency>
+        <!-- 开发工具 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional><!-- 表示依赖不会传递 -->
+        </dependency>
 	</dependencies>
 
 	<!-- 构建 -->
