--- a/bryce-cloud-module/bryce-cloud-email/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-email/pom.xml
@@ -43,6 +43,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!-- 开发工具 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional><!-- 表示依赖不会传递 -->
+        </dependency>
     </dependencies>
 
 </project>
