--- a/bryce-cloud-module/bryce-cloud-monitor/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-monitor/pom.xml
@@ -34,6 +34,12 @@
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-server</artifactId>
         </dependency>
+        <!-- 开发工具 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional><!-- 表示依赖不会传递 -->
+        </dependency>
     </dependencies>
 
 </project>
