--- a/bryce-cloud-module/bryce-cloud-sms/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-sms/pom.xml
@@ -48,6 +48,12 @@
             <groupId>com.tencentcloudapi</groupId>
             <artifactId>tencentcloud-sdk-java</artifactId>
         </dependency>
+        <!-- 开发工具 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional><!-- 表示依赖不会传递 -->
+        </dependency>
     </dependencies>
 
 </project>
