refactor(storage): 重构下载功能并优化附件服务
- 修改 StorageService 接口，将 download 方法返回类型改为 byte[]
- 实现类中增加 getFilenameByPath 和 getByteArrayByInputStream 方法
- 修改 SysAttachmentService 接口，将 download 方法返回类型改为 ResponseEntity<StreamingResponseBody>
- 实现类中增加 StreamingResponseBody 的创建和响应头的设置
- 优化附件下载功能，支持大文件下载

--- a/bryce-cloud-api/bryce-cloud-system-api/pom.xml
+++ b/bryce-cloud-api/bryce-cloud-system-api/pom.xml
@@ -20,6 +20,10 @@
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-common-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
