--- a/bryce-cloud-module/bryce-cloud-monitor/src/main/resources/META-INF/spring-devtools.properties
+++ b/bryce-cloud-module/bryce-cloud-monitor/src/main/resources/META-INF/spring-devtools.properties
@@ -1,1 +1,2 @@
-restart.include.json=/com.alibaba.fastjson2.*.jar
+restart.include.fastjson2=/com.alibaba.fastjson2.*.jar
+restart.include.cloud=/com.brycehan.cloud.*.jar
