refactor(bryce-cloud):调整配置和排除安全自动配置
- 更新 application.yml 文件中的注释，增加 Seata 配置说明
- 在网关应用中排除 ReactiveUserDetailsServiceAutoConfiguration- 在 SMS、存储和系统应用中排除 UserDetailsServiceAutoConfiguration
- 更新 MimeTypeUtils 中的压缩文件类型，增加 tar.gz

--- a/bryce-cloud-module/bryce-cloud-system/src/main/resources/application.yml
+++ b/bryce-cloud-module/bryce-cloud-system/src/main/resources/application.yml
@@ -1,8 +1,8 @@
-# Tomcat
+# Tomcat 配置
 server:
   port: 9016
 
-# Spring
+# Spring 配置
 spring:
   application:
     name: bryce-cloud-system
@@ -34,6 +34,7 @@ spring:
       - optional:nacos:application-jwt.yaml
       - optional:nacos:bryce-cloud-system.yaml
 
+# Seata 配置
 seata:
   config:
     type: nacos
