feat(infrastructure): 添加 Docker部署支持
- 新增 Dockerfile 文件，支持将各个模块打包为 Docker 镜像- 添加 docker-compose.yml 文件，定义服务编排和网络配置
- 更新 .gitignore 文件，排除 Docker 相关的构建输出
- 修改应用配置和日志配置，适应 Docker 环境
- 更新数据库脚本，调整 Sentinel 控制台的 URL

--- a/bryce-cloud-gateway/pom.xml
+++ b/bryce-cloud-gateway/pom.xml
@@ -38,6 +38,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
 		</dependency>
+        <!-- OpenFeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!-- Feign HttpClient 5 依赖 -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-hc5</artifactId>
+        </dependency>
         <!-- Swagger 接口文档 -->
 		<dependency>
 			<groupId>com.github.xiaoymin</groupId>
@@ -63,7 +73,6 @@
 
 	<!-- 构建 -->
 	<build>
-		<finalName>${project.artifactId}</finalName>
 		<!-- 插件 -->
 		<plugins>
 			<plugin>
