--- a/bryce-cloud-gateway/src/main/resources/application.yml
+++ b/bryce-cloud-gateway/src/main/resources/application.yml
@@ -38,4 +38,5 @@ spring:
       - optional:nacos:application-endpoint.yaml
       - optional:nacos:application-sentinel.yaml
       - optional:nacos:application-jwt.yaml
+      - optional:nacos:application-cache.yaml
       - optional:nacos:bryce-cloud-gateway.yaml
