--- a/bryce-cloud-module/bryce-cloud-sms/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-sms/pom.xml
@@ -55,5 +55,23 @@
             <optional>true</optional><!-- 表示依赖不会传递 -->
         </dependency>
     </dependencies>
-
+    
+    <!-- 构建 -->
+    <build>
+        <!-- 插件 -->
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
 </project>
