--- a/docker/bryce/auth/Dockerfile
+++ b/docker/bryce/auth/Dockerfile
@@ -1,18 +1,21 @@
+# 基础镜像
 FROM public.ecr.aws/docker/library/eclipse-temurin:17-jre
 
+# 镜像标签
 LABEL org.opencontainers.image.authors="Bryce Han"
-COPY ./bryce-cloud-gateway/target/bryce-cloud-gateway.jar /app.jar
-
+# 复制文件
+COPY ./jar/bryce-cloud-auth-*.jar /app.jar
+# 设置工作目录
 WORKDIR /
 
 # 设置时区
 ENV TZ=Asia/Shanghai
-
-EXPOSE 8090
-
+# 暴露端口
+EXPOSE 9011
+# 启动认证服务
 ENTRYPOINT java \
 	-server \
-	-Dserver.port=8090 \
+	-Dserver.port=9011 \
 	-Dspring.profiles.active=prod \
 	-Djava.security.egd=file:/dev/./urandom \
 	-Dfile.encoding=UTF-8 \
