--- a/bryce-cloud-auth/src/main/resources/application.yml
+++ b/bryce-cloud-auth/src/main/resources/application.yml
@@ -29,5 +29,5 @@ spring:
       - optional:nacos:application-feign.yaml
       - optional:nacos:application-sentinel.yaml
       - optional:nacos:application-jwt.yaml
+      - optional:nacos:application-rabbitmq.yaml
       - optional:nacos:bryce-cloud-auth.yaml
-
