--- a/bryce-cloud-module/bryce-cloud-system/src/main/resources/application.yml
+++ b/bryce-cloud-module/bryce-cloud-system/src/main/resources/application.yml
@@ -24,14 +24,14 @@ spring:
   config:
     import:
       - optional:nacos:application-common.yaml
-      - optional:nacos:application-cache.yaml
-      - optional:nacos:application-endpoint.yaml
       - optional:nacos:application-feign.yaml
+      - optional:nacos:application-endpoint.yaml
       - optional:nacos:application-sentinel.yaml
-      - optional:nacos:application-common.yaml
-      - optional:nacos:application-xxl-job.yaml
-      - optional:nacos:application-seata.yaml
       - optional:nacos:application-jwt.yaml
+      - optional:nacos:application-cache.yaml
+      - optional:nacos:application-xxl-job.yaml
+      - optional:nacos:application-rabbitmq.yaml
+      - optional:nacos:application-seata.yaml
       - optional:nacos:bryce-cloud-system.yaml
 
 # Seata 配置
