refactor(bryce-cloud): 更新数据库配置和监控端口
- 修改 Nacos 数据库连接配置- 更新 Sentinel 控制台端口为 8718
- 调整数据库初始化配置，启用 MySQL 平台配置

--- a/pom.xml
+++ b/pom.xml
@@ -390,7 +390,7 @@
             <properties>
                 <profiles.active>dev</profiles.active>
                 <nacos.server-addr>localhost:8848</nacos.server-addr>
-                <nacos.namespace>dev</nacos.namespace>
+                <nacos.namespace>public</nacos.namespace>
                 <nacos.group>bryce-cloud</nacos.group>
             </properties>
         </profile>
