--- a/docker/nacos/application.properties
+++ b/docker/nacos/application.properties
@@ -34,15 +34,15 @@ server.port=8848
 ### If use MySQL as datasource:
 ### Deprecated configuration property, it is recommended to use `spring.sql.init.platform` replaced.
 # spring.datasource.platform=mysql
-# spring.sql.init.platform=mysql
+spring.sql.init.platform=mysql
 
 ### Count of DB:
-# db.num=1
+db.num=1
 
 ### Connect URL of DB:
-# db.url.0=jdbc:mysql://127.0.0.1:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
-# db.user.0=nacos
-# db.password.0=nacos
+db.url.0=jdbc:mysql://cloud-mysql:3306/bryce_nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+db.user.0=root
+db.password.0=root
 
 ### Connection pool configuration: hikariCP
 db.pool.config.connectionTimeout=30000
@@ -162,7 +162,7 @@ nacos.core.auth.plugin.nacos.token.expire.seconds=18000
 ### The default token (Base64 String):
 nacos.core.auth.plugin.nacos.token.secret.key=
 
-### worked when nacos.core.auth.system.type=ldap，{0} is Placeholder,replace login username
+### worked when nacos.core.auth.system.type=ldap\u00EF\u00BC\u008C{0} is Placeholder,replace login username
 #nacos.core.auth.ldap.url=ldap://localhost:389
 #nacos.core.auth.ldap.basedc=dc=example,dc=org
 #nacos.core.auth.ldap.userDn=cn=admin,${nacos.core.auth.ldap.basedc}
