--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,15 +8,15 @@ services:
     image: public.ecr.aws/docker/library/mysql:8.0.33
     ports:
       - "3306:3306"
-    networks:
-      - cloud
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=bryce_cloud_system
     volumes:
       - ./mysql/conf:/etc/mysql/conf.d
       - ./mysql/db:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=bryce_cloud_system
+    networks:
+      - cloud
     restart: unless-stopped
   # Redis 服务
   cloud-redis:
@@ -24,18 +24,22 @@ services:
     image: public.ecr.aws/docker/library/redis:7.2.7
     ports:
       - "6379:6379"
-    networks:
-      - cloud
     volumes:
       - ./redis/redis.conf:/opt/redis.conf
       - redis-data:/data
     command:
       - /opt/redis.conf
+    networks:
+      - cloud
     restart: unless-stopped
   # nacos 服务
   cloud-nacos:
     container_name: cloud-nacos
     image:  nacos/nacos-server:v2.3.2-slim
+    ports:
+      - "8848:8848"
+      - "9848:9848"
+      - "9849:9849"
     environment:
       - MODE=standalone
       - NACOS_AUTH_ENABLE=false
@@ -43,43 +47,39 @@ services:
       - ./nacos/application.properties:/home/nacos/conf/application.properties
       - nacos-logs:/home/nacos/logs
       - nacos-data:/home/nacos/data
-    ports:
-      - "8848:8848"
-      - "9848:9848"
-      - "9849:9849"
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-mysql
-    restart: unless-stopped
   # grafana 服务
   cloud-grafana:
     container_name: cloud-grafana
     image: grafana/grafana:11.5.1
+    ports:
+      - "3000:3000"
     environment:
       - GF_SECURITY_ADMIN_USER=user
       - GF_SECURITY_ADMIN_PASSWORD=1234
     volumes:
       - ./grafana/loki.yaml:/etc/grafana/provisioning/datasources/loki.yaml
-    ports:
-      - "3000:3000"
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-loki
-    restart: unless-stopped
   # loki 服务
   cloud-loki:
     container_name: cloud-loki
     image: grafana/loki:3.3.2
+    ports:
+      - "3100:3100"
     environment:
       - MODE=standalone
       - NACOS_AUTH_ENABLE=false
     volumes:
       - ./loki/config.yml:/etc/loki/config.yml
       - loki-data:/var/lib/grafana
-    ports:
-      - "3100:3100"
     networks:
       - cloud
     restart: unless-stopped
@@ -87,11 +87,11 @@ services:
   cloud-zipkin:
     container_name: cloud-zipkin
     image: openzipkin/zipkin:3.4
+    ports:
+      - "9411:9411"
     environment:
       - TZ=Asia/Shanghai
       - LANG=en_US.UTF-8
-    ports:
-      - "9411:9411"
     networks:
       - cloud
     restart: unless-stopped
@@ -110,34 +110,49 @@ services:
     container_name: cloud-xxl-job-admin
 #    image: xuxueli/xxl-job-admin:2.5.0 # x64 镜像地址
     image: brycehan/xxl-job-admin:2.5.0 # x64 & arm 镜像地址
-    environment:
-      - PARAMS=--spring.datasource.url=jdbc:mysql://cloud-mysql:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai --spring.datasource.username=root --spring.datasource.password=root --xxl.job.accessToken=txuh4Pg7jKAiWVkfO4KGvVuw
     ports:
       - "9080:8080"
+    environment:
+      - PARAMS=--spring.datasource.url=jdbc:mysql://cloud-mysql:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai --spring.datasource.username=root --spring.datasource.password=root --xxl.job.accessToken=txuh4Pg7jKAiWVkfO4KGvVuw
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-mysql
-    restart: unless-stopped
-  # xxl-job-admin 服务
+  # rabbitmq 服务
   cloud-rabbitmq:
     container_name: cloud-rabbitmq
     image: rabbitmq:4.0-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
     environment:
       - TZ=Asia/Shanghai
       - RABBITMQ_DEFAULT_VHOST=/
       - RABBITMQ_DEFAULT_USER=admin
       - RABBITMQ_DEFAULT_PASS=admin
-    ports:
-      - "5672:5672"
-      - "15672:15672"
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
       - rabbitmq-plugins:/plugins
     networks:
       - cloud
-    depends_on:
-      - cloud-mysql
+    restart: unless-stopped
+  # minio 服务
+  cloud-minio:
+    container_name: cloud-minio
+    image: minio/minio:RELEASE.2025-02-07T23-21-09Z
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ACCESS_KEY=admin
+      - MINIO_SECRET_KEY=admin123
+    volumes:
+      - minio-data:/data
+      - minio-config:/root/.minio
+    command: server /data --console-address ":9001"
+    networks:
+      - cloud
     restart: unless-stopped
   # 网关服务
   cloud-gateway:
@@ -149,9 +164,9 @@ services:
       - "8090:8090"
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-redis
-    restart: unless-stopped
   # 认证服务
   cloud-auth:
     container_name: cloud-auth
@@ -162,9 +177,9 @@ services:
       - "9011:9011"
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-redis
-    restart: unless-stopped
   # 系统服务
   cloud-module-system:
     container_name: cloud-module-system
@@ -176,10 +191,10 @@ services:
       - "9999:9999"
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-mysql
       - cloud-redis
-    restart: unless-stopped
   # 邮件服务
   cloud-module-email:
     container_name: cloud-module-email
@@ -190,9 +205,9 @@ services:
       - "9012:9012"
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-redis
-    restart: unless-stopped
   # 短信服务
   cloud-module-sms:
     container_name: cloud-module-sms
@@ -203,9 +218,9 @@ services:
       - "9014:9014"
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-redis
-    restart: unless-stopped
   # 存储服务
   cloud-module-storage:
     container_name: cloud-module-storage
@@ -216,9 +231,9 @@ services:
       - "9015:9015"
     networks:
       - cloud
+    restart: unless-stopped
     depends_on:
       - cloud-redis
-    restart: unless-stopped
   # 监控服务
   cloud-module-monitor:
     container_name: cloud-module-monitor
@@ -241,6 +256,8 @@ volumes:
   loki-data: {}
   rabbitmq-data: {}
   rabbitmq-plugins: {}
+  minio-data: {}
+  minio-config: {}
 
 # 网络
 networks:
