feat(auth): 使用 ArithmeticCaptcha替代 SpecCaptcha 生成验证码
- 新增 ArithmeticCaptchaPlus 类，继承自 ArithmeticCaptcha，用于生成算术验证码
- 修改 AuthCaptchaServiceImpl 中的验证码生成逻辑，使用 ArithmeticCaptchaPlus替代 SpecCaptcha
- 更新 CaptchaProperties 中的验证码配置属性，增加字体大小设置
- 在 pom.xml 中添加 nashorn-core 依赖，用于算术验证码的计算

--- a/bryce-cloud-auth/pom.xml
+++ b/bryce-cloud-auth/pom.xml
@@ -43,10 +43,15 @@
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-cloud-sms-api</artifactId>
         </dependency>
-        <!-- 验证码 -->
+        <!-- 验证码组件 -->
         <dependency>
             <groupId>com.github.whvcse</groupId>
             <artifactId>easy-captcha</artifactId>
+        </dependency>
+        <!-- 验证码组件算法类型时需要 -->
+        <dependency>
+            <groupId>org.openjdk.nashorn</groupId>
+            <artifactId>nashorn-core</artifactId>
         </dependency>
         <!-- 开发工具 -->
         <dependency>
