--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
         <knife4j.version>4.5.0</knife4j.version>
         <!-- 验证码组件 -->
         <captcha.version>1.6.2</captcha.version>
+        <!-- 验证码组件算法类型时需要 -->
+        <nashorn-core.version>15.6</nashorn-core.version>
         <!-- Redis -->
         <redisson.version>3.37.0</redisson.version>
         <!-- ID 生成 -->
@@ -245,10 +247,17 @@
                 <artifactId>redisson</artifactId>
                 <version>${redisson.version}</version>
             </dependency>
+            <!-- 验证码组件 -->
             <dependency>
                 <groupId>com.github.whvcse</groupId>
                 <artifactId>easy-captcha</artifactId>
                 <version>${captcha.version}</version>
+            </dependency>
+            <!-- 验证码组件算法类型时需要 -->
+            <dependency>
+                <groupId>org.openjdk.nashorn</groupId>
+                <artifactId>nashorn-core</artifactId>
+                <version>${nashorn-core.version}</version>
             </dependency>
             <!-- ID 生成器 -->
             <dependency>
